# drf_project

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  drf-hw  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: settings.py  urls.py
course/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0005_course_price.py
nginx/: Dockerfile
users/: models.py  serializer.py  services.py
users/migrations/: 0004_remove_payments_stripe_session_id_and_more.py  0005_payments_stripe_session_id_payments_stripe_status.py
